assets/scss/organisms/text/_faqs.scss
.faq {
    margin-top: 110px;
    margin-bottom: 150px;

    .faq-item {
        width: 100%;
        margin-top: 40px;
        align-items: center;
        padding-bottom: 25px;
        justify-content: space-between;
        border-bottom: 1px solid $black;

        &:first-child {
            margin-top: 0;
        }
    }

    .question {
        width: 100%;
        text-align: left;
        align-items: center;
        justify-content: space-between;

        .title {
            width: 80%;
            font-size: 2.5rem;
        }
    }

    .questions-container {
        @include breakpoint(medium down) {
            margin-top: 50px;
        }
    }

    .arrow-down {
        transition: all .3s ease;
    }


    .answer {
        width: 100%;
        max-height: 0;
        overflow: hidden;
        padding: 0 40px 0 44px;
        transition: max-height 250ms ease-in-out, padding 250ms ease-in-out;

        @include breakpoint(medium down) {
            padding: 0 30px 0 30px;
        }

    }

    .expanded {

        .answer {
            max-height: 1024px;
            padding: 41px 40px 23px 44px;

            @include breakpoint(medium down) {
                padding: 15px 30px;
            }
        }

        .arrow-down {
            transform: rotate(180deg);
        }
    }
}

